tests/more-tests/type_error/test_type_error.py
from pysd import external

__pysd_version__ = "2.2.2"
_root = './'

external.ExtData('input.xlsx', 'Sheet1', '5', 'B6')
